Added decline route
